--- a/ProyectoGestiónEscolar/CapaPresentacion/Inicio.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Inicio.resx
@@ -338,50 +338,49 @@
   </data>
   <data name="btn_restaurar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABDSURBVFhH7c6xDQAwCMRA9l86adx/CpCI5Kvh5ZJWOkOY
-        z7hvx3zG/ftDwJwBBhhggAEGGGDAhwHdmM+4b8e8tEnVBRVbfZ9Bbc5zAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAENJREFUWEftzrENADAIxED2Xzpp3H8KkIjkq+HlklY6Q5jPuG/HfMb9+0PAnAEG
+        GGCAAQYYYMCHAd2Yz7hvx7y0SdUFFVt9n0FtznMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btn_minimizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHySURBVFhH7ZZNK0RhHMXHjrBQs0DUNHnLZ7EgC2XBGpPJ
-        lJLYz1fAwoIaL2GhxBdBxBewEWIGc8fvX+fepO7MfZPS/Or0zJw5/+POmHnuk2rSJAyO4/SgeXSBLtGD
-        ZI/P0VytVutWPDkoHqD4gLXKWhdlLDug8XhQNIleVF5GO2iCp1nUJWWV20UVnlv2mWVcNdGgpIAcK4QD
-        lNFLvpCxizmyAdYqyuulcDA/roLPKCXMLGnWOsZkB4OBPvSkd1GQHRpml60DHnncI7sxhLdtivVYViSo
-        aKHjVF1bsutDNkPYPjb7MmVlR4aeQfSO7N/RL9sfQnldcUlWbKizL7B15mT5Q+hc4SlZsaFrWp1nsvwh
-        dKtwMhsJ0DWszmtZ/hCyDcTokOUhvyGKe9DZaT7rkyx/CLm7XrssD/ODoLhH2Au4UXhIVmyoG1HnlSx/
-        CP35lzCncGI/Q7r21bkgyx9Ctg1/oCQ3ogoKthEZBDd0xScsLbJDY7N0uFvxpuzGEO5F7s1oVXZomF23
-        Dgh3MzIYcm/Hdh5YkR0I8vbO12wWwt+OXRj0DiQshyxBDyTHmrE/vqiXokHBzyNZCc2gUaxW1jZ7jGbR
-        HiorG/9I5kJRGhUpfbPyepB5ZSmitMaTg/Lvx/J7ZJ+I6Q793rG8yT8mlfoCuqJQuDNzIPsAAAAASUVO
-        RK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAfJJREFUWEftlk0rRGEcxceOsFCzQNQ0ectnsSALZcEak8mUktjPV8DCghovYaHE
+        F0HEF7ARYgZzx+9f596k7sx9k9L86vTMnDn/486Yee6TatIkDI7j9KB5dIEu0YNkj8/RXK1W61Y8OSge
+        oPiAtcpaF2UsO6DxeFA0iV5UXkY7aIKnWdQlZZXbRRWeW/aZZVw10aCkgBwrhAOU0Uu+kLGLObIB1irK
+        66VwMD+ugs8oJcwsadY6xmQHg4E+9KR3UZAdGmaXrQMeedwjuzGEt22K9VhWJKhooeNUXVuy60M2Q9g+
+        NvsyZWVHhp5B9I7s39Ev2x9CeV1xSVZsqLMvsHXmZPlD6FzhKVmxoWtanWey/CF0q3AyGwnQNazOa1n+
+        ELINxOiQ5SG/IYp70NlpPuuTLH8IubteuywP84OguEfYC7hReEhWbKgbUeeVLH8I/fmXMKdwYj9DuvbV
+        uSDLH0K2DX+gJDeiCgq2ERkEN3TFJywtskNjs3S4W/Gm7MYQ7kXuzWhVdmiYXbcOCHczMhhyb8d2HliR
+        HQjy9s7XbBbC345dGPQOJCyHLEEPJMeasT++qJeiQcHPI1kJzaBRrFbWNnuMZtEeKisb/0jmQlEaFSl9
+        s/J6kHllKaK0xpOD8u/H8ntkn4jpDv3esbzJPyaV+gK6olC4M3Mg+wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btn_maximizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADwSURBVFhH7ZIxCsJAEEVzWr2B9in0DEJqBcHWE1iI2Fho
-        YuElbBQjqy/LD5isKYRdLdwHn3FnhvkfNenCGJOi6yMQ3C7RVHYuDHPtBgMPIzsXZoWWVpSeT3FzQbXI
-        zuUlQKaWN7g5sO6glsv/BOAxRkd0aulWLVDPrf6nOqC+vC28GwHu+hwMPPbytjQCqFZLazTxrPpnLORt
-        4f02wEBzb3Az0+0YIAaIAWKAGCAGiAHOlHkt3ruqX/GVAF0wL7/1DVwo27boj37yH2hg3SEGYGmJhp61
-        0e3uAAyNTRAQLHLZuTCcaS8I3L+jVHYtkuQJGPSQutX8rq4AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAPBJREFUWEftkjEKwkAQRXNavYH2KfQMQmoFwdYTWIjYWGhi4SVsFCOrL8sPmKwp
+        hF0t3AefcWeG+R816cIYk6LrIxDcLtFUdi4Mc+0GAw8jOxdmhZZWlJ5PcXNBtcjO5SVAppY3uDmw7qCW
+        y/8E4DFGR3Rq6VYtUM+t/qc6oL68LbwbAe76HAw89vK2NAKoVktrNPGs+mcs5G3h/TbAQHNvcDPT7Rgg
+        BogBYoAYIAaIAc6UeS3eu6pf8ZUAXTAvv/UNXCjbtuiPfvIfaGDdIQZgaYmGnrXR7e4ADI1NEBAsctm5
+        MJxpLwjcv6NUdi2S5AkY9JC61fyurgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="Btn_Cerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI4SURBVFhH7ZZBS1RRHMWnXSatEmyUsJAi+iyFEojQIpdq
-        LiKKhhho3RcIWhYSDqYiWqSfRFyI+AUyzHKanHn9zvW0GJ07b9682TU/ONx3zzv/854y8+YV+vTJQqPR
-        GPFhIDHeBs5negKlRbSIarYCvv75G/iNPmBft5UPyh6iQ12ItWo7IE94G9ANyGP9hiZsdwcFC6juwhU0
-        5lMB+cLbgDJoTT7rKZr1qWwwP8lwHYkXtpvQRYS3TTBTOhsNHQ9sdwYDRXq/q5zj57YvoPPC2wsw+1Ln
-        WQ/RsO10CC96sGKrJcoIb1tCxyfH3ttqDwM30B90omPbLXFx2g3oM6FvRg2lf0UJlVTK+tFWlHB18DYK
-        XRXlWFt+lpog9CW0JsmUrSjOdXID08qxbtiKQ+ggtCbJTVtRnOvkBsaVY923FYfQL4cHbEVRTngbhcgV
-        5ej8aSsOoR8OD9rKDV1X3XlkKw6hXYfv2MoNdXfduWMrDqGvDk/byg1dj9z52VYcQgsOL9nKDXXL7pyz
-        FYfQKNKDSA+PcdtdQ8dtpIeQVLTdHoLvfMfrLJdsZ0azdGy6663tdAiPoCMPlm1nhtnX6gD9sGV7QWF4
-        Av37OX5lu2OYKZ+Nho77trPB4DM16E9gWWFJfTqSu4VWPaOLP/Wp7qBAr2THLqyiJfQY3cO6zDqgYzSD
-        KqjqrB5ok67JB0VD6A2lJypvBxk9ypW95vHeQanejp+gbbSH9B+RdLyF5rl4b96G+/wnFAp/AcYPAoE4
-        37MWAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAjhJREFUWEftlkFLVFEcxaddJq0SbJSwkCL6LIUSiNAil2ouIoqGGGjdFwhaFhIO
+        piJapJ9EXIj4BTLMcpqcef3O9bQYnTtv3rzZNT843HfPO//znjLz5hX69MlCo9EY8WEgMd4Gzmd6AqVF
+        tIhqtgK+/vkb+I0+YF+3lQ/KHqJDXYi1ajsgT3gb0A3IY/2GJmx3BwULqO7CFTTmUwH5wtuAMmhNPusp
+        mvWpbDA/yXAdiRe2m9BFhLdNMFM6Gw0dD2x3BgNFer+rnOPnti+g88LbCzD7UudZD9Gw7XQIL3qwYqsl
+        yghvW0LHJ8fe22oPAzfQH3SiY9stcXHaDegzoW9GDaV/RQmVVMr60VaUcHXwNgpdFeVYW36WmiD0JbQm
+        yZStKM51cgPTyrFu2IpD6CC0JslNW1Gc6+QGxpVj3bcVh9AvhwdsRVFOeBuFyBXl6PxpKw6hHw4P2soN
+        XVfdeWQrDqFdh+/Yyg11d925YysOoa8OT9vKDV2P3PnZVhxCCw4v2coNdcvunLMVh9Ao0oNID49x211D
+        x22kh5BUtN0egu98x+ssl2xnRrN0bLrrre10CI+gIw+WbWeG2dfqAP2wZXtBYXgC/fs5fmW7Y5gpn42G
+        jvu2s8HgMzXoT2BZYUl9OpK7hVY9o4s/9anuoECvZMcurKIl9Bjdw7rMOqBjNIMqqOqsHmiTrskHRUPo
+        DaUnKm8HGT3Klb3m8d5Bqd6On6BttIf0H5F0vIXmuXhv3ob7/CcUCn8Bxg8CgTjfsxYAAAAASUVORK5C
+        YII=
 </value>
   </data>
 </root>
