--- a/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
@@ -213,4 +213,53 @@
         mJn9FxhbCpnuLfWGAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btn_asignar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACgtJREFUeF7tmgtQVNcZx00z03aa2LRpO1WSTtu0Ex9oNU1sjDbWRhFpwKo8ZGWX
+        1wKKsLyEBQRR3utbUWvFGBUUFXmDdxfBSWJ9TQRfxFiNxgLCIrA8Iyo+/j3nchfv7l4Udhewnf3P/Ibl
+        7OF83/e/55774IywyCKLLLLIIov+Z1VfbPWjlvI3/0A/t5WNcmk/Pvpqe/no6vZyqwRgxEtspxdBGg3z
+        4zpNqY26RbmsXqPcqNaodpOf2RTu8wZ1C+NP+9C+3J89Vx3lb3zQXja6lPx8mxTdTYoHDzeu2/DotoZ5
+        s66FiVRrlKdJgQ8J6Ce076m6FpW8trn4DW64Z6qj3EqqVzzBag/39dCqQcNMVTcri0gRj3lFGcuj+hZl
+        gbpZ9SdueEG1l/1yqr4BHeWjw7ivh0YNbaW/rWtmigWKMA/EiPrWo7/mwhmInApJpPDHrAFlo4/is9/8
+        kPtqcAXgJZJgGKFLJ+HB4W59szKIxuTC66jp5M9HdjKjfsH9OviqbVe9Xq9RMQKJDip0plW3lfyUS2N4
+        VNuo+j1J5lttUher9qMwR2FWmKL1BsX30qy8caeN+R2Xjo5S82fPVOTZXFPk2qzhmswrusKTJP6jTSbv
+        cDJ8HGyxKS7CbIR7iBAnczMsXJdbQleKNXmz1xIDQLjNNZlPtzvKf0am/df8RDzn/hWaxpt4/KiFRV17
+        Ff+uOm0S61aE4eDeVfxi++Ir/dNhbfbMUaT4bYr8OXZck3kEZL9Mpt7n/ASu3siGu+1HvcVTur5To72l
+        2iQUEYFQlmzkF/osVMDq73FpDp5IILra6wS/duMInKZPZYumxV8+9zkqTx4zmcRgf2QfiNeJ9SzIwijj
+        0hwc1TUpx5Cjf18/8PWbOVgwbQbk3l44lJ5mNhKIAYGLHHRiPYeuO20lb3Hpml8kQIleQBZqgMjWGWLn
+        BCxyCIa7vdhs2L8z2SCeEK2dF9HcfpZ+zuPSNa/IXdif9YNqoQaIPxbBb1kufHz2IDEhF4o1pWbBcdpU
+        wZi6qPDkySN0P2xlfycPVNO4tM0n8hRXaBi4B74BYqc4yIO2CBZjDP0zQEmO/hk0tp3Q/m7eWUAc/RUZ
+        tM8HmxfBAD0e9/cpsl9Sa5hwgSC98A3w9NiKuJhMwWK0JCYrkapQCX6nj5EGEJgQLn3TRQY8aRjgKXwD
+        lgTkCRbCx8MvCzFxxYLf6WO0AeRehUvfNDU2fvYqGbDbIAAPvgES1xREL9/RW8DKVSUIDMlFdEwRQiLy
+        2TZqQJg8HwGhOYiKKXzad3UJAkJyEB5V0Ntm/AxQPmhoKH2FK8N4kefvGQKD69DXGhCfyMBZnIEwUrjU
+        /xBc3HtODWqAm9cBhJJ22rZiZXFPX0kGQpbnQRaaS04Rkw1AXQsznSvDeJHL3xKhwfn0ZYA8upAUfpj9
+        vDqB0TEgIqrnyNPZERyWy/b1WdbTl48pBpDLow9XhvGq0yjXCQ/+lL4MoEWzM0BewBrBN0AszWJnwCL3
+        /ewMYA2SZCIkPI+YktO7SJpigLpZpeDKMF5koF36A+vTlwGUWLLY0fOanuvac5se/SiyJtB2ujY87duz
+        Biwn64O2zcQZkM6VYbzUGuVBOlhD63F8d+9btN/92iDQswwwFZNmAMmdK8N4qTWqQ3Swrvt10Kqls1In
+        0P+1AWQg9hS4e7+WKx/QdFToBHpRDSDs5MowXtpFUN1Sho6ua+Sp65JBoOcZIA/aiGDfOIQHbkCM/BPE
+        r8qGYtDvBM22CDK+QoPzeZ4BIX5JsH/3Pfg5irEyMAKRS4IR4OoBvwUi+Mx3he9CCWQSGcL8YhARqEBk
+        6DZyO52BlJQSkwyo0zDeXBnGy5QbIT7hy1Kx1EkM14/mwsNehKTotTjxRRWqrjTi/IVaHC87h7zDKuz5
+        RyY2xK9HrCySNcl9rh2C3JwR6r4Iq0N9kJYahv274nCzJl8wFz5muRFqvbDpJ43qg/fVTYWCQSj9XQNk
+        3tFIlMcj69NCuDu4wcMxCIHiYKQlb8eZM9dZM/ri4uV61rD9u4/AY+4s3KjJE8yFR9c3YH7AlWGcui8s
+        mvKwUlRPQPd5CVpqdggFGtAiuEwcgi3JW3CpSo2tin/CfZ47Fs+XY4k4BkEeMnyydR87I4RMqDxfA5nI
+        Gecv7hPMgw+5ApRzZRivh5WuZ2jxWrovSMjCctQg2EAMoHd4vs5SfLo9gy2KFpsUlQrPhUshdomHxDkW
+        Ad4rIfePRG4Wg8tf3WH7Xa5qQKSfL46pthjEF8YMj8OkaDXfAEpDo+HUG4gBlJRUBl4OIuRkHe09uvQU
+        iF4WBU+nIEh99kIiSoX7wlAsXSxDasxapETFYt/OWIPYfdCt7mRM///go0pROr/4e1WBQsEGbAAlKakA
+        Hn9byC5+WhMo5ccqIF+6ApL5MmKCAlLfDHiKN8LH0UUwdh+Y55UYLkleISZsJ8VfvX/Rs/xOY+4TgWBG
+        GUChL0897R17rwZ8lMWnIfMIgreYzATRWgR6yVHbaHj6CfDkdqtqEpt/tvPLOOvW790mzxUZXPC1eM2d
+        Ejj9ZRb7NmggBlBWxWZBOs8ZX35508CEjPSDCJFIIXUJR0TINpyr2GMQW4Deo08OnJLw5FGF62KuyTRx
+        L0c79QKypKUGk0ubO9wcfCCxW4glLtJn4uvsBV+nHjwdXMk9git7qdMWvyY2GX7zHbF3RwY2JW+Gr4s/
+        cg4mG8Tlc+r0rs6UELfeaz8p/jo9dR9WLF7JNZkuuroKBaecPbsb+dkpKDiSIvivbj5Sm8lY5zcGYY6T
+        sU0hw+YkGaKXBrCrflJEDFxnTmf/L5h9IAE7N8uxKsSDXAHSkLlrhUFcemooVkgR7r1AaWs9XjX73bde
+        o7k+qBCN7a4UeeEbO9PuB/RV36zM1E9ioCT6vIf6IisUb5qCUmYT25aZHgdvBwe4zf4Q1fVFBn9DuXL9
+        EDHKBadOpeN2U8+akL5lOXZvj/xiprX1q7bW4wo+njhxcDdO0G1sJPBFfmIDxdfuHfj/fRq850zqNYCy
+        e1skqhuKdfrqU60uwvFjadic6I8dG0KxaMb7D+wnTciZaz32iO348R9yaQ6uapqOWZFkbukn118O7l2J
+        2oYSMs3XkWl/QLBPf6huKLnl8MfJDElp6DdF9myUePb/DAaZE3SP0pwJ446SdIZnV2hTU+FIksgRvcQG
+        Hfq2R/vef86E8Sk2E8bOYRMaDoHdJqcKJokNyTY5dbMqgAvNat6YMSNtJ4wrmz3x7cHbG9AfDedGSVtr
+        69eH3QCthmOr7JCLbkVPzbVZrsizCetrW7p2szQp4l+Ee7yingfte2Igm6WHXCl5sz7g9uEhpWDO+1xz
+        n6JvZ+hRrNMopeRucr3hdnlmPX2HR2bOlCvI/j73Zy+uFNmzX1Pk2pwlBpxZzdiZ74nLIossssgiiywa
+        Go0Y8V/faEnF+GNc1AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
