--- a/ProyectoGestiónEscolar/CapaPresentacion/Reporte_Notas_Admin.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Reporte_Notas_Admin.resx
@@ -179,4 +179,7 @@
         z1lefDfuhVkikVNkXqctYrX0MIkkkkhipEhJ+R/z4X77iYfJ2AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>177, 17</value>
+  </metadata>
 </root>
