--- a/ProyectoGestiónEscolar/CapaPresentacion/Ajustes_Admin.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Ajustes_Admin.resx
@@ -118,6 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_inscripcion.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGqSURBVGhD7ZVPSgMxGMXHA4hH0IW40SN4AtG1/24hgrhz
+        JV5GT+Ep7KKuFCx0M5lMa4eJX+SLxJJI0ualKvnBg/YlfS9fZqBVoVAo/C26plFIcQ0OV2lKcQ0OV2lK
+        cQ0ORBki0wuiDJHpBVGGyPSCKENkekGUITK9IMoQmV4QZYhML7OmuTFia2kQmf8DfSP2442RfZupcqIp
+        AzArGSA0yD5cSFnIfnuPES+FMx8QVCbEI32/+0l6T1Qmi5fCmQ+IKQsVdACNHbSqAXx7gggJepdyn16L
+        q0Wkf8sx38g6AIIygMEXpJRa66Q8IR3rz2wn8+EDdHV9Znx9ALaT+TkGODc+FZ+yncyHDxD7SsT68AHQ
+        ZB2gn0x2ZkIMtPq23WY72rfJOgD9IV2aPfQqXLAd7dtkHYBv9Jk0dNx0sG+TdQAEyXrpcV9bQbdsw9Fd
+        plefge146DEffg0gxFMv5SYvwVBtu0VdA6v3gJfiUePxBt3GqwnLLep+6UejdT7OYlDIEd3C1FWAlO7U
+        3XyM5ZjW9R69iw8U+OYqS6nPDiHuqXOX6wuFQuHXUlUfdi03bB0oEcwAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btn_ciclo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
