--- a/ProyectoGestiónEscolar/CapaPresentacion/Crear_Asignacion_Cursos.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Crear_Asignacion_Cursos.resx
@@ -135,10 +135,112 @@
         u2q1w/icSOQf0IR8d8w6EUwAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="ttMensaje.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>172, 16</value>
-  </metadata>
-  <metadata name="errorIcono.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>277, 16</value>
-  </metadata>
+  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACydJREFUaEPNWVlsU+kVplX3l25qqy7qQx+6P4zahz5VVVu1L60qVX1p1UqtRu1o
+        ZrwkYQaYAQYCiAEmsZ3Y2WzfzXE2sidkXwhkTyAJSVgmkEAgC2QDQsju+PSc//7X98YYHAK0OdKR7Wvf
+        //++/+zXu55X3G+4P22z+n5tMysf2s1yhcOqDDti5Ac2sww2i7LuiFFm8PqAzSTLNov8n+SYzO/yW/+/
+        Yn/T920EZHNY5FkCi69B/3Fpo8otQnOermczRShySJC2T1pnpMxyEAk12U2+P8Mu+ARf7n8nJ99wfxFP
+        O8FulVcdVnmjIkMK3uwQYX3SCzDzbL0/JEBXiQjiQSnASFuVQbIeX/rVi92i/B5PetqOp12viPBoODLQ
+        aBqc9sLH5wQQVCJBdC8RXfELfJtXIzaz9C6aPijFS4F7A0JEYEu3vUDWuFIvQHepCL2VIlxvFuFevwo6
+        /Pfrd73Qgm5mNytBsga5Jd/u5YrdpBwik5enirAW5iqr4164UCZAzkkZ0DLk4xE1bZ8CtYIE4z1PkifS
+        zjh5w2GVRl96kGMmsRKAGq8IwSl90/W7qj+n7FHAZlXAfbIScosGoaxtAmqHFqH+5ip7rbgwA0W1IyCn
+        N0PSO1mMTJFDZlYxkrh7SQDXbjmAcXXdHid8hW//YmIzKb/FTLNRniYFjeAXbnoh6wSeLJ645GqCiosz
+        DHA0rR16DHnFlyF5bzZgeoX+Gt0agTtuuN3qgaRYeQNjrT4+Pv6THMb2xBErf4kCVjokBYxuM31ZAPf7
+        PnC9lwvFZ0d1gCOrUNo2Dtl5veBNqgf3R9XgTqiGM533NpEgrb4yD97kemaNRp8Iy1czYGkwnenFfI/q
+        diZ5N4eyPbGZpGTKNkZTP76F4Pf7IOWDQqjqfxACVFhzA1KPlKobozulHS1lBDyJNVDeMRn6XUXPLNQg
+        ePZ5ZAV8cju757yCCYATIC1IECnFLjli/d/kcJ5PKBsg+DVKlRp4yhhZJxRw7suB6kEVRO31JZBSmhiI
+        1PgSKKgagtqPH4cAh2vG8Qp0nxwoabqtXkOriXQ/uuJgqSdE4F5bBhKQMDvJSRzS8wkueJIq6/wN/fQp
+        YNE3obRlLATI/VEVO/GcvD4GRrv+NKWATjlUhOv4oKx1gl2jQ0g7Vgqp7yrwsEd3pSqXAFgsV8iVOayt
+        CQbPpzATTJenSCHwy5jfXbiBhJnECIiyTjE/zcZbq9B2ZwXOj24GHa41GMjZ2T0hK5KWtU8yKzSJQojA
+        nSa36pLYP3FoWxO7RfoV3Xi9Wc8Qnfz0K3vnNoHRtHNsGebmF2BhQdXbc0vQMRGA1vF1aLq9FvGecBUc
+        dZAcp8CjPj0WpA9oX6meQ9uaJJqUYxS8K2O6+/iPy+CxVUfcmE7eCF7T0YdrMDAHTC/c22C/i3S/psWN
+        o+zEr5TrsVDv8YI9RlmNj8//DIcXXexmqcp3TA5o4BdHcRE0b17JYMSN29FtwsGTTs0vhwiQ9kwHoSHC
+        /ZpSLCTF+aEqRXejy2VqSnW8Lb/G4UUXDJzRigw9+9zqENgi5V1TETcmn49EYHJ+ZRMB0jZ0q0hraOrB
+        uqHESyECE+fVOLCb5L9yeNEFT3vxXJYewIPYmNEiz0qP5PNG8POPFuDa/Y0nCPSiFSLdryklibQ9cojA
+        g4sZbO9Es2zh8KIL3rDRelq3QDcGMKVKSpMFtTcwtfmYFtYOhzbumAzA6IM15jZ08pHAa2oETAWPAKYd
+        K2Of/b4u5q6PB1QCj/vTNQLvcXjRxWaRNmiS0ghQS0yL1A0vs+qbffoSU2MlbhsPRAQbrv0zmwkUVA+x
+        GlJQdZ19VoQ27IWUkAXmMSPR3tTKc3jRBWvAbL2su9DQedWFqvofbtrcqJQqIwEO127MRpHu11RIbgDv
+        ft2FZjq5C5mkf3N40QXb54sFdjmoEZjsUwkUNdxkm5AlyH0yM7vYe21zSpWRQJNOzS/Bg0eL0HpHB0sV
+        nU7euEbq4ULI+1DPQsN1ahAnmuTfcXjRBW8QUvcq68AnKGqjqefPVDrZJmLKWbZoyoEC1h5rm1Oep1QZ
+        icCDhUV4hIHdPLoS+r3iaWHrON/PYw1eRd8c+9zq1xu77jw1jSbFeL/B4UUXLN2v002zV1UCpNVeibXP
+        dSPLrOxT0akf1sEYtR1TJWWbgVn0eVRymxY8eSN4ptiNFjXegkypg9WAnPxLDOx4s94PldhEBC9NcGhb
+        E/a4BGffjkI9kMcuqm6Uj92mEQQNMrSx8Vo0Le+8qxZFQ/NHkxt1uf5jeg142JsOzlga+KVkDm3rQs9t
+        PPvlwIZhCitOQiugubVxsbJ3FlvjXLTM6U1+HE0JPB2GP7M7dC07t5ddI5/XCGiDTYJJ+gWHtXWxmZW/
+        0M3XzuoN3fRlLyRZcYRMa2KbFtaNsNa4okcdJ6k9NoIyKgVsXumV0Ge/v5vFAL0vax2n4QVK7WII/CLW
+        AeGABMmx8iUO6fmEnpjhPNDvPSgHaHjXSPTXqDWBxkYNjKbpx89A2pGS0Oe0o2VQWH2Dvaf2mWaAygG9
+        dpBW9t0HJ87HwgF50yzQnetVT9+i/IFDen7BivhLXCR4LluPBdIGRWKLs6zEA5l6fKrWp0suh8DRb7Ky
+        L4aAsupdp1dvmp+dOJ25dssw0aKDn2rPYNccMXITh7J9wcE6AyszjLTrVqABvFnGE8KS7z5ZwdIfAaq+
+        jAMKZhYNYOrhYqy0aoUNfY+vFC9EzI6E0/fKbHDRwC9cSoesozQDyAHHW9L3OIztiz0u//PYnfY74+TA
+        9KDAHn1om10944Y0BEBA5IzzUNo8xtKsBjhcqwYeQm5BP9aP04x8qV2AuW795JfQ78uT1GxHmmiRjnAY
+        LyYJb2Z+HYNsiJ6cDTdtfnowj6mu2ecFJ5qcNk1+JwvcpypZT0OVmtxMcDWyCqsByzkuwq1G/SBIaQor
+        tuEMjN83lvcFq/K6+O+VAxzGi8kpi/c7aIlrmIWCF7A6GjfXAFw944GqVAGUwxJzDTplasy8GKCnT4jQ
+        nuWByVbDiXMln8/C/E+Aq/O7gteHZ2GgfwJce3NW8VoQ1xnFblQhDBzO9uTEW9lfxgXraKP8U2JEMM+j
+        1DJ35XpYwDKguG65ryU4OIDg92StOay+9dyjmZB71A9JGBP4/VRSjPgDDmd7Qo/7Es3KXgyyZbQIVDoF
+        GDME4VaUKmwPFinK8wQa1+nE1yF6T+rak7NC/zs0ufzQ48tl2pyRjVVZYSTQGj/kcLYvp8zit3ChVIdF
+        WqNNlcMiNHgEGCxzw/j5DMzpKtgFHEioJb5R64HOHA/rbZJjVeBJMXIf+vif0O/f1sBr6kdyrS4Bujy+
+        J0jgzD79UkiQpJh8X6VeHU+slp4ehAMJV6ysE+jTtkSr8nO+BKZq3/fx2uv0Tw2tlxwjrfgPiowAI+HN
+        fJKERX55JDSJ/5f8OYdJ+hmmv7/h4jFYQ/aR2k3SPxPM0m+cFulr/KfPlGSrVEDuWZeoEggn0ZKBxY+T
+        cLyd+SN+284RIorgplzYidYn6pbodOvutONJ0L80GBvj1DzWPoVEmzcHUuIYiXmjS+4YoZRJJ+yMUTZb
+        whDYLW60BBZYu1mZ3ZGWUElIMzjYQD1msKeSIHeyKiNOi/Oz/NadI5RtsLWfdcZITyVR58xWM51J+iO/
+        bWcJuQe60xyRaMAmMESCx0S3lMMJvODfUq9SMD3/GAvffcxO0GCwBBW7HW8BTewm5SfoToxEJTaILdjK
+        VJwUd3YMhEuCVfgptveTWnVnih3rjsxCTxM7Dlqu3dI/hH2ymBor/p26APWbXbv+CwxSOPQZMYrvAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACydJREFUaEPNWVlsU+kVplX3l25qqy7qQx+6P4zahz5VVVu1L60qVX1p1UqtRu1o
+        ZrwkYQaYAQYCiAEmsZ3Y2WzfzXE2sidkXwhkTyAJSVgmkEAgC2QDQsju+PSc//7X98YYHAK0OdKR7Wvf
+        //++/+zXu55X3G+4P22z+n5tMysf2s1yhcOqDDti5Ac2sww2i7LuiFFm8PqAzSTLNov8n+SYzO/yW/+/
+        Yn/T920EZHNY5FkCi69B/3Fpo8otQnOermczRShySJC2T1pnpMxyEAk12U2+P8Mu+ARf7n8nJ99wfxFP
+        O8FulVcdVnmjIkMK3uwQYX3SCzDzbL0/JEBXiQjiQSnASFuVQbIeX/rVi92i/B5PetqOp12viPBoODLQ
+        aBqc9sLH5wQQVCJBdC8RXfELfJtXIzaz9C6aPijFS4F7A0JEYEu3vUDWuFIvQHepCL2VIlxvFuFevwo6
+        /Pfrd73Qgm5mNytBsga5Jd/u5YrdpBwik5enirAW5iqr4164UCZAzkkZ0DLk4xE1bZ8CtYIE4z1PkifS
+        zjh5w2GVRl96kGMmsRKAGq8IwSl90/W7qj+n7FHAZlXAfbIScosGoaxtAmqHFqH+5ip7rbgwA0W1IyCn
+        N0PSO1mMTJFDZlYxkrh7SQDXbjmAcXXdHid8hW//YmIzKb/FTLNRniYFjeAXbnoh6wSeLJ645GqCiosz
+        DHA0rR16DHnFlyF5bzZgeoX+Gt0agTtuuN3qgaRYeQNjrT4+Pv6THMb2xBErf4kCVjokBYxuM31ZAPf7
+        PnC9lwvFZ0d1gCOrUNo2Dtl5veBNqgf3R9XgTqiGM533NpEgrb4yD97kemaNRp8Iy1czYGkwnenFfI/q
+        diZ5N4eyPbGZpGTKNkZTP76F4Pf7IOWDQqjqfxACVFhzA1KPlKobozulHS1lBDyJNVDeMRn6XUXPLNQg
+        ePZ5ZAV8cju757yCCYATIC1IECnFLjli/d/kcJ5PKBsg+DVKlRp4yhhZJxRw7suB6kEVRO31JZBSmhiI
+        1PgSKKgagtqPH4cAh2vG8Qp0nxwoabqtXkOriXQ/uuJgqSdE4F5bBhKQMDvJSRzS8wkueJIq6/wN/fQp
+        YNE3obRlLATI/VEVO/GcvD4GRrv+NKWATjlUhOv4oKx1gl2jQ0g7Vgqp7yrwsEd3pSqXAFgsV8iVOayt
+        CQbPpzATTJenSCHwy5jfXbiBhJnECIiyTjE/zcZbq9B2ZwXOj24GHa41GMjZ2T0hK5KWtU8yKzSJQojA
+        nSa36pLYP3FoWxO7RfoV3Xi9Wc8Qnfz0K3vnNoHRtHNsGebmF2BhQdXbc0vQMRGA1vF1aLq9FvGecBUc
+        dZAcp8CjPj0WpA9oX6meQ9uaJJqUYxS8K2O6+/iPy+CxVUfcmE7eCF7T0YdrMDAHTC/c22C/i3S/psWN
+        o+zEr5TrsVDv8YI9RlmNj8//DIcXXexmqcp3TA5o4BdHcRE0b17JYMSN29FtwsGTTs0vhwiQ9kwHoSHC
+        /ZpSLCTF+aEqRXejy2VqSnW8Lb/G4UUXDJzRigw9+9zqENgi5V1TETcmn49EYHJ+ZRMB0jZ0q0hraOrB
+        uqHESyECE+fVOLCb5L9yeNEFT3vxXJYewIPYmNEiz0qP5PNG8POPFuDa/Y0nCPSiFSLdryklibQ9cojA
+        g4sZbO9Es2zh8KIL3rDRelq3QDcGMKVKSpMFtTcwtfmYFtYOhzbumAzA6IM15jZ08pHAa2oETAWPAKYd
+        K2Of/b4u5q6PB1QCj/vTNQLvcXjRxWaRNmiS0ghQS0yL1A0vs+qbffoSU2MlbhsPRAQbrv0zmwkUVA+x
+        GlJQdZ19VoQ27IWUkAXmMSPR3tTKc3jRBWvAbL2su9DQedWFqvofbtrcqJQqIwEO127MRpHu11RIbgDv
+        ft2FZjq5C5mkf3N40QXb54sFdjmoEZjsUwkUNdxkm5AlyH0yM7vYe21zSpWRQJNOzS/Bg0eL0HpHB0sV
+        nU7euEbq4ULI+1DPQsN1ahAnmuTfcXjRBW8QUvcq68AnKGqjqefPVDrZJmLKWbZoyoEC1h5rm1Oep1QZ
+        icCDhUV4hIHdPLoS+r3iaWHrON/PYw1eRd8c+9zq1xu77jw1jSbFeL/B4UUXLN2v002zV1UCpNVeibXP
+        dSPLrOxT0akf1sEYtR1TJWWbgVn0eVRymxY8eSN4ptiNFjXegkypg9WAnPxLDOx4s94PldhEBC9NcGhb
+        E/a4BGffjkI9kMcuqm6Uj92mEQQNMrSx8Vo0Le+8qxZFQ/NHkxt1uf5jeg142JsOzlga+KVkDm3rQs9t
+        PPvlwIZhCitOQiugubVxsbJ3FlvjXLTM6U1+HE0JPB2GP7M7dC07t5ddI5/XCGiDTYJJ+gWHtXWxmZW/
+        0M3XzuoN3fRlLyRZcYRMa2KbFtaNsNa4okcdJ6k9NoIyKgVsXumV0Ge/v5vFAL0vax2n4QVK7WII/CLW
+        AeGABMmx8iUO6fmEnpjhPNDvPSgHaHjXSPTXqDWBxkYNjKbpx89A2pGS0Oe0o2VQWH2Dvaf2mWaAygG9
+        dpBW9t0HJ87HwgF50yzQnetVT9+i/IFDen7BivhLXCR4LluPBdIGRWKLs6zEA5l6fKrWp0suh8DRb7Ky
+        L4aAsupdp1dvmp+dOJ25dssw0aKDn2rPYNccMXITh7J9wcE6AyszjLTrVqABvFnGE8KS7z5ZwdIfAaq+
+        jAMKZhYNYOrhYqy0aoUNfY+vFC9EzI6E0/fKbHDRwC9cSoesozQDyAHHW9L3OIztiz0u//PYnfY74+TA
+        9KDAHn1om10944Y0BEBA5IzzUNo8xtKsBjhcqwYeQm5BP9aP04x8qV2AuW795JfQ78uT1GxHmmiRjnAY
+        LyYJb2Z+HYNsiJ6cDTdtfnowj6mu2ecFJ5qcNk1+JwvcpypZT0OVmtxMcDWyCqsByzkuwq1G/SBIaQor
+        tuEMjN83lvcFq/K6+O+VAxzGi8kpi/c7aIlrmIWCF7A6GjfXAFw944GqVAGUwxJzDTplasy8GKCnT4jQ
+        nuWByVbDiXMln8/C/E+Aq/O7gteHZ2GgfwJce3NW8VoQ1xnFblQhDBzO9uTEW9lfxgXraKP8U2JEMM+j
+        1DJ35XpYwDKguG65ryU4OIDg92StOay+9dyjmZB71A9JGBP4/VRSjPgDDmd7Qo/7Es3KXgyyZbQIVDoF
+        GDME4VaUKmwPFinK8wQa1+nE1yF6T+rak7NC/zs0ufzQ48tl2pyRjVVZYSTQGj/kcLYvp8zit3ChVIdF
+        WqNNlcMiNHgEGCxzw/j5DMzpKtgFHEioJb5R64HOHA/rbZJjVeBJMXIf+vif0O/f1sBr6kdyrS4Bujy+
+        J0jgzD79UkiQpJh8X6VeHU+slp4ehAMJV6ysE+jTtkSr8nO+BKZq3/fx2uv0Tw2tlxwjrfgPiowAI+HN
+        fJKERX55JDSJ/5f8OYdJ+hmmv7/h4jFYQ/aR2k3SPxPM0m+cFulr/KfPlGSrVEDuWZeoEggn0ZKBxY+T
+        cLyd+SN+284RIorgplzYidYn6pbodOvutONJ0L80GBvj1DzWPoVEmzcHUuIYiXmjS+4YoZRJJ+yMUTZb
+        whDYLW60BBZYu1mZ3ZGWUElIMzjYQD1msKeSIHeyKiNOi/Oz/NadI5RtsLWfdcZITyVR58xWM51J+iO/
+        bWcJuQe60xyRaMAmMESCx0S3lMMJvODfUq9SMD3/GAvffcxO0GCwBBW7HW8BTewm5SfoToxEJTaILdjK
+        VJwUd3YMhEuCVfgptveTWnVnih3rjsxCTxM7Dlqu3dI/hH2ymBor/p26APWbXbv+CwxSOPQZMYrvAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
